add recepie with input check
